# vivado-agent

./: .env.example  .gitignore  LICENSE  README.md  check_wdb.tcl  check_wdb2.tcl  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml  vivado_settings.yaml
docs/: guide.md
example/: check_wdb3.tcl  create_buggy_prj.tcl  create_project.tcl  export_vcd.tcl  export_vcd2.tcl  export_wave.tcl  help_wave.tcl  run_agent_final.tcl  run_buggy.tcl  run_buggy2.tcl  run_buggy3.tcl  run_final.tcl  xsim_dump.tcl
example/buggy_prj/: buggy_prj.xpr
example/buggy_prj/buggy_prj.sim/sim_1/behav/xsim/: compile.bat  dump_sigs.tcl  dump_sigs2.tcl  dump_sigs3.tcl  dump_wave.tcl  elaborate.bat  help_xsim.tcl  signal_dump.csv  simulate.bat  tb_buggy.tcl  tb_buggy_vlog.prj  xsim.ini
example/rtl/: counter.v  counter_buggy.v  debouncer.v
example/tb/: tb_buggy.sv  tb_counter.sv
src/: main.py  mcp_adapter.py
src/agent/: auto_fix_agent.py  batch_orchestrator.py  debug_orchestrator.py  log_parser_agent.py  simulation_optimizer.py  waveform_agent.py
src/core/: config.py  llm_client.py  tcl_engine.py
src/tools/: bug_db.py  dependency_graph.py  incremental_compile.py  log_analyzer.py  module_parser.py  multithread_tuner.py  post_synth_flow.py  ppa_analyzer.py  project_detector.py  protocol_analyzer.py  rag_index.py  runtime_monitor.py  static_scanner.py  synth_checker.py  timing_constraint_gen.py  waveform_trimmer.py  wdb_reader.py
src/utils/: logger.py
tests/: test_core.py
tests/benchmark/: test_benchmark.py
tests/benchmark/rtl/: counter.sv  top.sv
(+14 files in other folders)
